Implement user and user credential management features
- Added UserQueries for CRUD operations on users.
- Created IUserService interface and UserService implementation for user management.
- Introduced UserCredential entity and builder for handling user credentials.
- Developed IUserCredentialRepository interface and UserCredentialRepository for database interactions.
- Implemented password hashing strategy using SHA-512.
- Created UserCredentialService for managing user credentials, including password creation and verification.
- Added SQL scripts for user credentials schema and queries.
- Established error handling with specific error codes for user and credential operations.

--- a/Studently/appsettings.json
+++ b/Studently/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=Studently;User Id=sa;Password=;;TrustServerCertificate=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
